update css commit

--- a/views/partials/_head.ejs
+++ b/views/partials/_head.ejs
@@ -1,4 +1,4 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/css/site.css">
+<link rel="stylesheet" href="/styles/ella.css">
 <title>Ella Rises</title>
