--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -1,9 +1,20 @@
 <nav class="navbar">
-  <a href="/">Ella Rises</a>
-  <a href="/participants">Participants</a>
-  <a href="/events">Events</a>
-  <a href="/surveys">Surveys</a>
-  <a href="/milestones">Milestones</a>
-  <a href="/donations">Donations</a>
-  <a href="/users">Users</a>
+  <a href="/" class="navbar-brand">
+    <img src="/images/EllaRisesLogo.PNG" alt="Ella Rises" class="logo-img">
+  </a>
+  <div class="navbar-nav">
+    <a href="/participants" class="nav-link">Participants</a>
+    <a href="/events" class="nav-link">Events</a>
+    <a href="/surveys" class="nav-link">Surveys</a>
+    <a href="/milestones" class="nav-link">Milestones</a>
+    <a href="/donations" class="nav-link">Donations</a>
+    <div class="dropdown">
+      <a href="#" class="nav-link">Users</a>
+      <div class="dropdown-content">
+        <a href="/login">Login</a>
+        <a href="/register">Register</a>
+        <a href="/users">Manage Users</a>
+      </div>
+    </div>
+  </div>
 </nav>
