--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <section class="hero">
   <h1>Ella Rises</h1>
   <p>Empowering young women through mentoring, creative workshops, and leadership opportunities.</p>
+  <a href="/login" class="btn-login-home">Login</a>
 </section>
