view survey page

--- a/views/partials/layout.ejs
+++ b/views/partials/layout.ejs
@@ -23,7 +23,9 @@
     <!-- Center Section: Main Links -->
     <div class="navbar-nav" style="margin-left: .25rem;">
       <a href="/donations" class="nav-link">Donations</a>
-      <a href="/surveys"   class="nav-link">Surveys</a>
+      <% if (user) { %>
+        <a href="/surveys"   class="nav-link">Surveys</a>
+      <% } %>
       <a href="/events"    class="nav-link">Events</a>
     </div>
 
@@ -54,6 +56,7 @@
               <a href="/admin/users">All Participants</a>
               <a href="/milestones">Milestones</a>
               <a href="/dashboard">Dashboard</a>
+              <a href="/admin/surveys">View Surveys</a>
             <% } %>
 
             <!-- Logout -->
